# lumrapido

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: LICENSE_Duck  README.md
include/: EnvMapSamplingData.h  GLTFLoader.h  RayTracer.h  RayTracingMaterial.h  RayTracingMaterialGroup.h  RayTracingScene.h  RayTracingUniform.h  RayTracingVisitor.h  SceneConversionTraversal.h  gltfUtils.h  hammersley.h  utils.h
shaders/: background.rmiss  closestHit.rchit  common.glsl  miss.rmiss  rayGeneration.rgen  rayGenerationQMC.rgen
src/: EnvMapSamplingData.cpp  GLTFLoader.cpp  RayTracer.cpp  RayTracingMaterialGroup.cpp  RayTracingScene.cpp  SceneConversionTraversal.cpp  gltfUtils.cpp  hammersley.cpp  main.cpp  utils.cpp
test_scenes/: README.md  cornell_box.blend  cornell_box.glb  white_env.exr
